@@ -1,0 +1,7 @@
+plugin_LTLIBRARIES = libgstlibvisual.la
+
+libgstlibvisual_la_SOURCES = visual.c 
+libgstlibvisual_la_CFLAGS = $(GST_CFLAGS) $(LIBVISUAL_CFLAGS)
+libgstlibvisual_la_LIBADD = $(LIBVISUAL_LIBS)
+libgstlibvisual_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+
